app/assets/stylesheets/application_layout.css.scss
@import "material/scss/material-kit/variables";

body {
    background-color: white;
}

.wrapper {
  position: relative;
  top: 0;
  height: 100vh;
}

.main-panel {
    position: relative;
    float: right;
    width: calc(100% - 230px);
    background: linear-gradient(180deg, #FFFFFF 0%, #E5E5E5 100%);
    transition: 0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1);
}

@media screen and (max-width: 768px) {
    .main-panel {
        width: 100%;
    }
}

.main-panel>.navbar {
    margin-bottom: 0;
}

.main-panel .navbar-collapse p {
    margin: 0;
    line-height: 30px;
    font-size: 1.5em;
    font-weight: bold;
    position: relative;
    display: inline-block;
    height: auto;
    white-space: nowrap;
    text-transform: capitalize;
}

.main-panel .navbar-collapse .material-icons {
    line-height: 30px;
    font-size: 1.5em !important;
    margin-left: 10px;
}

.main-panel .navbar-brand {
    margin-left: 1rem;
    font-size: 1.4em;
    font-weight: bold;
}

.navbar.navbar-transparent .navbar-toggler .navbar-toggler-icon {
    background-color: #0B4C65;
}

.nav-open .main-panel .navbar-toggler {
    left: 0;
    -webkit-transform: translate3d(-230px, 0, 0);
    -moz-transform: translate3d(-230px, 0, 0);
    -o-transform: translate3d(-230px, 0, 0);
    -ms-transform: translate3d(-230px, 0, 0);
    transform: translate3d(-230px, 0, 0);
    transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
}

.navbar .notification {
    position: absolute;
    top: 5px;
    border: 1px solid #FFF;
    right: 10px;
    font-size: 9px;
    background: #f44336;
    color: #FFFFFF;
    min-width: 20px;
    padding: 0px 5px;
    height: 20px;
    border-radius: 10px;
    text-align: center;
    line-height: 19px;
    vertical-align: middle;
    display: block;
}

.main-panel>.content {
    margin-top: 70px;
    padding: 0px 4% 0px 4%;
    min-height: calc(100vh - 123px);
}

strong {
  font-weight: bold;
}

.row.bottom-cta {
    margin-top: 2em;
}

h1, h2, h3, h4 {
  font-family: Maven Pro;
}

p, a, h5 {
  font-family: Quicksand;
}

body {
  font-family: Quicksand;
}

footer {
  font-family: Quicksand;
}

h1, h2, h3, .h1, .h2, .h3 {
    margin-top: 10px;
    margin-bottom: 10px;
}

h2.description {
    margin-top: 20px;
    margin-bottom: 20px;
    color: $brand-grey;
}

h2, h3, h4, h5 {
    font-weight: bold;
    line-height: 1.3em;
}

.btn {
    text-transform: none;
    font-weight: bold;
}

footer .copyright {
    padding: 0px 0;
}

footer .material-icons {
  color: $brand-primary;
}

